Change to index.html

--- a/age-14.html
+++ b/age-14.html
@@ -36,7 +36,7 @@
         <p>She also got her first cat named Lucky!</p>
     </details>
     
-    <p><a href="selina.html">Back to Home</a></p>
+    <p><a href="index.html">Back to Home</a></p>
     
     <h3>Other Ages:</h3>
     <ul>
