--- a/age-17.html
+++ b/age-17.html
@@ -37,7 +37,7 @@
         <p>During the summer she joined the Explore Engineering Innovation summer program at Johns Hopkins University, her highlight of the program was building a bridge out of spaghetti for her final! She ended her summer with a solo trip to Japan! </p>
     </details>
     
-    <p><a href="selina.html">Back to Home</a></p>
+    <p><a href="index.html">Back to Home</a></p>
     
     <h3>Other Ages:</h3>
     <ul>
