--- a/age-7.html
+++ b/age-7.html
@@ -35,7 +35,7 @@
         <p>During the making of the film, she was able to travel to Beijing, Wuhan, and the U.K.!</p>
     </details>
     
-    <p><a href="selina.html">Back to Home</a></p>
+    <p><a href="index.html">Back to Home</a></p>
     
     <h3>Other Ages:</h3>
     <ul>
