--- a/age-1.html
+++ b/age-1.html
@@ -30,7 +30,7 @@
         <p>She lived here her enrtire life until moving to the U.S.!.</p>
     </details>
     
-    <p><a href="selina.html">Back to Home</a></p>
+    <p><a href="index.html">Back to Home</a></p>
     
     <h3>Other Ages:</h3>
     <ul>
