--- a/age-18.html
+++ b/age-18.html
@@ -36,7 +36,7 @@
         <p>She is at Hillside Campus in Roman's IXP 2 class! </p>
     </details>
     
-    <p><a href="selina.html">Back to Home</a></p>
+    <p><a href="index.html">Back to Home</a></p>
     
     <h3>Other Ages:</h3>
     <ul>
